fix(service): improve customer and invoice validation logic